Fine CRUD Docente, inizio sviluppo Corso

--- a/src/app/docenti/docente/docente.html
+++ b/src/app/docenti/docente/docente.html
@@ -19,7 +19,7 @@
       <input id="data" type="date" formControlName="data" />
     </div>
     <button type="submit">{{ isEdit ? 'Aggiorna' : 'Aggiungi' }}</button>
-    <a [routerLink]="'/docenti'">Annulla</a>
+    <button [routerLink]="'/docenti'">Annulla</button>
 
   </div>
 </form>
