--- a/src/app/nav/nav.html
+++ b/src/app/nav/nav.html
@@ -1,1 +1,9 @@
-<a routerLink="docenti" >Docenti</a>
+<div>
+  <p-button [routerLink]="['docenti']">Docenti</p-button>
+</div>
+<div>
+  <p-button [routerLink]="['docenti']">Corso</p-button>
+</div>
+<div>
+  <p-button [routerLink]="['docenti']">Alunni</p-button>
+</div>
