--- a/src/app/docenti/docenti.html
+++ b/src/app/docenti/docenti.html
@@ -18,14 +18,14 @@
           <td>{{docente.nome}}</td>
           <td>{{docente.cognome}}</td>
           <td>{{docente.data}}</td>
-          <td><button><a [routerLink]="['/docenti', docente.id]">Seleziona</a></button></td>
-          <td><button>Elimina</button></td>
+          <td><button [routerLink]="['/docenti', docente.id]">Seleziona</button></td>
+          <td><button (click)="onCancel(docente.id!)">Elimina</button></td>
         </tr>
       }
     </tbody>
   </table>
 </div>
 
-<button><a [routerLink]="['/docenti', 'new']">Aggiungi docente</a></button>
+<button [routerLink]="['/docenti', 'new']">Aggiungi docente</button>
 
 
