--- a/src/app/docenti/docenti.html
+++ b/src/app/docenti/docenti.html
@@ -9,6 +9,7 @@
         <th>Cognome</th>
         <th>Data di Nascita</th>
         <th>Aggiorna</th>
+        <th>Cancella</th>
       </tr>
     </thead>
     <tbody>
@@ -27,5 +28,6 @@
 </div>
 
 <button [routerLink]="['/docenti', 'new']">Aggiungi docente</button>
+<button [routerLink]="['']">Home</button>
 
 
