--- a/src/app/nav/nav.html
+++ b/src/app/nav/nav.html
@@ -2,8 +2,8 @@
   <p-button [routerLink]="['docenti']">Docenti</p-button>
 </div>
 <div>
-  <p-button [routerLink]="['docenti']">Corso</p-button>
+  <p-button [routerLink]="['corsi']">Corsi</p-button>
 </div>
 <div>
-  <p-button [routerLink]="['docenti']">Alunni</p-button>
+  <p-button [routerLink]="['alunni']">Alunni</p-button>
 </div>
