--- a/src/app/corsi/corso/corso.html
+++ b/src/app/corsi/corso/corso.html
@@ -19,8 +19,13 @@
       <input id="anno" type="number" formControlName="anno" />
     </div>
     <div>
-      <label for="docenteId">Docente ID</label>
-      <input id="docenteId" type="number" formControlName="docenteId" />
+      <label for="docente">Docente</label>
+      <select id="docente" formControlName="docente" >
+        <option [ngValue]=null> Nessun Docente </option>
+        @for (docente of docenti; track docente.id) {
+          <option [ngValue]="docente"> {{ docente.nome}} {{docente.cognome}}</option>
+        }
+      </select>
     </div>
     <button type="submit">{{ isEdit ? 'Aggiorna' : 'Aggiungi' }}</button>
     <button [routerLink]="'/corsi'">Annulla</button>
