--- a/src/app/alunni/alunno/alunno.html
+++ b/src/app/alunni/alunno/alunno.html
@@ -27,7 +27,7 @@
       <input id="voto" type="number" step=".1" formControlName="voto" />
     </div>
     <button type="submit">{{ isEdit ? 'Aggiorna' : 'Aggiungi' }}</button>
-    <button [routerLink]="['alunni']">Annulla</button>
+    <button [routerLink]="['/alunni']">Annulla</button>
 
   </div>
 </form>
